# Changelog

All notable changes to this project will be documented in this file. The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/), and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [1.0.13]

### Changed

 - Removed port 80 from port check list

## [1.0.12]

### Added

- Added switches to handle registration without contacting MOP for information. --jwt, --controller, --hostId --linkListener

## [1.0.11] - 2023-09-18

### Changed
- Change fabric port to 443 for ziti version 0.30.0 and above

## [1.0.10] - 2023-09-14

### Fixed

- Fixed issue with salt roles not being a list
## [1.0.9] - 2023-08-02

- Rebuild to comsume ziti_router_auto_enroll 1.0.11.

## [1.0.8] - 2023-07-27

### Fixed

- NF_PORT_BYPASS need to be an integer for check to work.
## [1.0.7] - 2023-07-26

### Changed

- Update so port 6262 doesn't error, just print an info that it's closed.


## [1.0.6] - 2023-07-26

### Fixed

- Bugfix - salt-minion was not enabled.

## [1.0.5] - 2023-07-18

### Added 

- Add --dnsIPRange & --lanIf arguments


## [1.0.4] - 2023-06-23

- Switch diverter configuration to zfw instead of tproxy slicer
- Moved nfhelp download to before ziti registration

## [1.0.3] - 2023-06-20

- Rebuild to comsume ziti_router_auto_enroll 1.0.6.

## [1.0.2] - 2023-06-14

- Rebuild to comsume ziti_router_auto_enroll 1.0.5.


## [1.0.1] - 2023-05-31

- Rebuild to consume ziti_router_auto_enroll 1.0.4.


## [1.0.0] - 2023-04-18

- Initial version